﻿*******************************************************************

   Название проекта : OPOS драйвер WebKassa
   Компания         : ШТРИХ-М, Россия 
                     (495) 787-60-90, www.shtrih-m.ru

*******************************************************************

  OposWebKassa_0.113.exe
  3 июня 2025 11:10
  
  [-] Изменена папка для установки драйвера
  [+] Добавлена запись в лог стека при системных исключениях
  
*******************************************************************

  OposWebKassa_0.112.exe
  16 мая 2025 19:37
  
  [-] Исправлена ошибка утечки памяти "Out of memory"
  
*******************************************************************

  OposWebKassa_0.111.exe
  4 апреля 2025 14:55
  
  [-] Исправлена печать заголовка и подвала чека для принтера XPrinter
  
*******************************************************************

  OposWebKassa_0.109.exe
  2 апреля 2025 17:30
  
  [+] При инициализации ESC принтера добавлена команда 0x1C 0x2E 
      для отмены китайских символов, которые могут быть включены 
	  по-умолчанию
  
*******************************************************************

  OposWebKassa_0.108.exe
  2 апреля 2025 13:22
  
  [+] Обновлена библиотека zint.dll до версии 2.15, 
	  исключены библиотеки lpng и zlib
  
*******************************************************************

  OposWebKassa_0.107.exe
  1 апреля 2025 16:45
  
  [+] Добавлена поддержка принтера XPrinter, 
      https://www.xprintertech.com/
	  
  [-] Исправлена печать в страничном режиме на принтере Posiflex
  
*******************************************************************

  OposWebKassa_0.106.exe
  18 марта 2025 14:25
  
  [-] Исправлена печать в страничном режиме, когда QR код 
      печатается справа
  
*******************************************************************

  OposWebKassa_0.105.exe
  11 марта 2025 12:32
  
  [-] Исправлена печать в страничном режиме, когда QR код 
      печатается справа
  