@@ -5,25 +5,25 @@ OposWebkassaTest.exe=1
 TJSONTest=1
 TWebkassaClientTest2=1
 TWebkassaTest=0
-TWebkassaClientTest=1
-TSalesReceiptTest=1
-TTranslationTest=1
-TOposDeviceTest=1
-TRegExprTest=1
-TPrinterParametersTest=1
-TWebkassaImplTest3=1
-TTextDocumentTest=1
-TWebkassaImplTest4=1
-TPageBufferTest=1
-TWebkassaImplTest2=1
-TPosPrinterWindowsTest=1
-TComUtilsTest=1
+TWebkassaClientTest=0
+TSalesReceiptTest=0
+TTranslationTest=0
+TOposDeviceTest=0
+TRegExprTest=0
+TPrinterParametersTest=0
+TWebkassaImplTest3=0
+TTextDocumentTest=0
+TWebkassaImplTest4=0
+TPageBufferTest=0
+TWebkassaImplTest2=0
+TPosPrinterWindowsTest=0
+TComUtilsTest=0
 TLogFileTest=1
-TWebkassaImplTest=1
-TPosPrinterRongtaTest=1
-TReceiptTemplateTest=1
-TEscPrinterRongtaTest=1
-TOposUtilsTest=1
+TWebkassaImplTest=0
+TPosPrinterRongtaTest=0
+TReceiptTemplateTest=0
+TEscPrinterRongtaTest=0
+TOposUtilsTest=0
 
 [Tests.OposWebkassaTest.exe.TWebkassaClientTest]
 CheckAuthenticate=1
@@ -33,24 +33,24 @@ TestMoneyOperationCommand=1
 AuthenticateTest2=0
 TestAlternativeDomainNames=1
 TestIdHeaderList=0
-TestAuthenticate=1
-TestChangeToken=1
-TestZReportRequest=1
-TestZReportAnswer=1
-TestZReportAnswer2=1
-TestZReport=1
-TestXReport=1
-TestJournalReport=1
-TestReadCahiers=1
-TestReadReceipt=1
-TestReadReceiptText=1
-TestReadReceiptText2=1
-TestReadUnits=1
-TestUploadOrder=1
-TestMoneyOperation=1
-TestSendReceipt=1
-TestSendReceipt2=1
-CheckSSLLibrary=1
+TestAuthenticate=0
+TestChangeToken=0
+TestZReportRequest=0
+TestZReportAnswer=0
+TestZReportAnswer2=0
+TestZReport=0
+TestXReport=0
+TestJournalReport=0
+TestReadCahiers=0
+TestReadReceipt=0
+TestReadReceiptText=0
+TestReadReceiptText2=0
+TestReadUnits=0
+TestUploadOrder=0
+TestMoneyOperation=0
+TestSendReceipt=0
+TestSendReceipt2=0
+CheckSSLLibrary=0
 
 [GUITestRunner Config]
 AutoSave=1
@@ -95,33 +95,33 @@ PrintHeaderAndCut=1
 TestNonFiscal2=1
 TestClaim=1
 TestFiscalReceipt3=1
-TestZReport=1
-TestXReport=1
-TestCashIn=1
-TestCashOut=1
-TestNonFiscal=1
-OpenClaimEnable=1
-TestFiscalReceipt=1
-TestFiscalReceipt2=1
-TestCoverError=1
-TestRecEmpty=1
-TestStatusUpdateEvent=1
-TestDuplicateReceipt=1
-TestSetHeaderLines=1
-TestSetTrailerLines=1
-TestReceiptTemplate=1
-TestReceiptTemplate3=1
-TestGetJsonField=1
-TestEncoding=1
-TestBarcode=1
-TestFiscalreceiptType=1
-TestFiscalreceiptType2=1
-TestZeroFiscalReceipt=1
-TestPrintDuplicate=1
-TestPrintDuplicate2=1
-TestRecLineChars=1
-TestParseJson=1
-TestParseJson2=1
+TestZReport=0
+TestXReport=0
+TestCashIn=0
+TestCashOut=0
+TestNonFiscal=0
+OpenClaimEnable=0
+TestFiscalReceipt=0
+TestFiscalReceipt2=0
+TestCoverError=0
+TestRecEmpty=0
+TestStatusUpdateEvent=0
+TestDuplicateReceipt=0
+TestSetHeaderLines=0
+TestSetTrailerLines=0
+TestReceiptTemplate=0
+TestReceiptTemplate3=0
+TestGetJsonField=0
+TestEncoding=0
+TestBarcode=0
+TestFiscalreceiptType=0
+TestFiscalreceiptType2=0
+TestZeroFiscalReceipt=0
+TestPrintDuplicate=0
+TestPrintDuplicate2=0
+TestRecLineChars=0
+TestParseJson=0
+TestParseJson2=0
 
 [Tests.OposWebkassaTest.exe.TWebkassaClientTest2]
 TestAuthenticate=1
@@ -146,67 +146,69 @@ TestSendReceipt=0
 
 [Tests.OposWebkassaTest.exe.TSalesReceiptTest]
 TestReceiptAdjustments=1
-TestEncoding=1
-TestPrintRecItem=1
-TestPrintRecVoid=1
-TestItemAdjustment=1
-TestSubtotalAdjustment=1
-TestReceiptWithChange=1
-TestDirectIO=1
+TestEncoding=0
+TestPrintRecItem=0
+TestPrintRecVoid=0
+TestItemAdjustment=0
+TestSubtotalAdjustment=0
+TestReceiptWithChange=0
+TestDirectIO=0
 
 [Tests.OposWebkassaTest.exe.TPrinterParametersTest]
-CheckLoadReg=1
-CheckLoadParams=1
-CheckSetDefaults=1
-CheckDefaultParams=1
-CheckGetTranslationText=1
-CheckArrayOfString=1
+CheckLoadReg=0
+CheckLoadParams=0
+CheckSetDefaults=0
+CheckDefaultParams=0
+CheckGetTranslationText=0
+CheckArrayOfString=0
 
 [Tests.OposWebkassaTest.exe.TOposUtilsTest]
 TestRegExpression=1
-TestCeil=1
-TestStrToNibble=1
+TestCeil=0
+TestStrToNibble=0
 
 [Tests.OposWebkassaTest.exe.TPosEscPrinterTest]
 
 [Tests.OposWebkassaTest.exe.TTranslationTest]
-CheckLoadSave=1
+CheckLoadSave=0
 
 [Tests.OposWebkassaTest.exe.TTextDocumentTest]
-TestAdd=1
-TestAddItem=1
+TestAdd=0
+TestAddItem=0
 
 [Tests.OposWebkassaTest.exe.TReceiptTemplateTest]
-TestSave=1
-TestUnicode=1
+TestSave=0
+TestUnicode=0
 
 [Tests.OposWebkassaTest.exe.TWebkassaImplTest2]
 TestNonFiscal=1
 TestReceiptTemplate=1
 TestPrintQRCodeAsGraphics=1
 TestPrintDatamatrixBarcode=1
-TestMockMethod=1
-TestMockMethod2=1
-TestMockMethod3=1
-OpenService=1
-ClaimDevice=1
-EnableDevice=1
-OpenClaimEnable=1
-TestRenderQRCode=1
+TestMockMethod=0
+TestMockMethod2=0
+TestMockMethod3=0
+OpenService=0
+ClaimDevice=0
+EnableDevice=0
+OpenClaimEnable=0
+TestRenderQRCode=0
 
 [Tests.OposWebkassaTest.exe.TOposDeviceTest]
-TestDataConversion=1
+TestDataConversion=0
 
 [Tests.OposWebkassaTest.exe.TWebkassaImplTest3]
 TestPrintQRCode=1
 TestPrintBarcode=1
-TestPrintBarcodeFailed=1
-TestPrintBarcodeAsBarcode=1
-TestPrintBarcodeAsBarcode2=1
+TestPrintBarcodeFailed=0
+TestPrintBarcodeAsBarcode=0
+TestPrintBarcodeAsBarcode2=0
 
 [Tests.OposWebkassaTest.exe.TLogFileTest]
-WriteUnicode=1
-WriteUnicode2=1
+WriteUnicode=0
+WriteUnicode2=0
+TestOutOfMemory=1
+DeleteLogFile=1
 
 [Tests.OposWebkassaTest.exe.TWebkassaImplTest4]
 
@@ -214,35 +216,35 @@ WriteUnicode2=1
 TestPrintNormal=1
 
 [Tests.OposWebkassaTest.exe.TRegExprTest]
-TestSplit=1
-TestFontNumber=1
-TestGetTagNumber=1
-TestGetEscTag=1
-TestGetEscTags=1
-TestGetEscTags2=1
-TestGetEscTags3=1
-TestParseOposBarcode=1
+TestSplit=0
+TestFontNumber=0
+TestGetTagNumber=0
+TestGetEscTag=0
+TestGetEscTags=0
+TestGetEscTags2=0
+TestGetEscTags3=0
+TestParseOposBarcode=0
 
 [Tests.OposWebkassaTest.exe.TComUtilsTest]
-TestDestroy=1
-TestDestroy2=1
-TestDestroy3=1
+TestDestroy=0
+TestDestroy2=0
+TestDestroy3=0
 
 [Tests.OposWebkassaTest.exe.TPosPrinterRongtaTest]
-TestPrintNormal=1
-TestRecLineChars=1
+TestPrintNormal=0
+TestRecLineChars=0
 
 [Tests.OposWebkassaTest.exe.TEscPrinterRongtaTest]
-EncodeUserCharacter=1
+EncodeUserCharacter=0
 
 [Tests.OposWebkassaTest.exe.TPageBufferTest]
-TestPrint=1
+TestPrint=0
 
 [Tests.OposWebkassaTest.exe.TPosPrinterWindowsTest]
 
-TestRecLineChars=1
-TestPrintReceipt=1
-TestPageMode=1
-TestPageMode2=1
-TestPageMode3=1
-TestUnicodeCanvas=1
+TestRecLineChars=0
+TestPrintReceipt=0
+TestPageMode=0
+TestPageMode2=0
+TestPageMode3=0
+TestUnicodeCanvas=0
