@@ -6,6 +6,14 @@
 
 *******************************************************************
 
+  OposWebKassa_0.114.exe
+  9 июня 2025 11:50
+  
+  [+] Добавлена печать слова "ДУБЛИКАТ" при печати копии чека 
+      через DIO_PRINT_RECEIPT_DUPLICATE
+  
+*******************************************************************
+
   OposWebKassa_0.113.exe
   3 июня 2025 11:10
   
